Respond to user feedback -- Fix external link SVGs on Safari

--- a/public/css/components/entry-content.css
+++ b/public/css/components/entry-content.css
@@ -209,6 +209,8 @@
         a {
             /* Improve legibility */
             font-weight: var(--font-family-prose-weight-medium);
+            /* Needed for Safari 18.3.1 */
+            display: inline-flex;
         }
 
         p {
